# tigerdns

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  taskw
.cargo/: config.toml
src/: allocator.rs  io.rs  main.rs  udp.rs
